<resources>
    <string name="app_name">GroupProject</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="teacher_page">Teacher Page</string>
    <string name="student_page">Student Page</string>
    <string name="school_helper">School Helper</string>
    <string name="time">Time</string>
    <string name="subject_code">Subject Code</string>
    <string name="submit">Submit</string>
    <string name="className">Class</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="slot_1">Slot 1</string>
    <string name="slot_2">Slot 2</string>
    <string name="slot_3">Slot 3</string>
    <string name="slot_4">Slot 4</string>
    <string name="slot_5">Slot 5</string>
    <string name="slot_6">Slot 6</string>
    <string name="slot_7">Slot 7</string>
    <string name="slot_8">Slot 8</string>
    <string name="check_attendance">Check Attendance</string>
    <string name="create_ticket">Create Ticket</string>
    <string name="checking_ticket">Checking Ticket</string>
    <string name="teacher_id">Teacher Id</string>
    <string name="message">Message</string>
    <string name="create_a_ticket">Create A Ticket</string>
    <string name="login">Login</string>
</resources>
